syntax = "proto3";
import "server_base_structs.proto";
import "recommendations.proto";

package ProtoSpace;

message DiagnosticRecommendationListCreationRequest{
    ControlInfo controls                        = 1;
    RecommendationListRequestData data          = 2;
}

message AuthorParamsForRecommendationList{
    uint32 author_id                             = 1;
    uint32 full_list_size                        = 2;
    uint32 total_matches                         = 3;
    uint32 negative_matches                      = 4;
    
    // common, uncommon, rare, unique
    uint32 match_category                        = 5; 
    uint32 list_size_without_ignores             = 6;
    double ratio_difference_on_neutral_mood      = 7;
    double ratio_difference_on_touchy_mood       = 8;
}


message AuthorsForFic{
    uint32 fic_id             = 1;
    repeated uint32 author_id = 2;
}

message DiagnosticRecommendationListData{
    bool is_valid                                                              = 1;
                                   
    double quadratic_deviation                                                 = 2;
    double ratio_median                                                        = 3;
    uint32 distance_to_double_sigma                                            = 4;
                                   
    // fic_id -> list of author ids
    repeated AuthorsForFic matches                                             = 5; 
    repeated AuthorParamsForRecommendationList author_params                   = 6;

}



message DiagnosticRecommendationListCreationResponse{
    string list_token                     = 1; // garbo for now
    DiagnosticRecommendationListData list = 2;
    ResponseInfo response_info            = 3;
}
