/*
Flipper is a replacement search engine for fanfiction.net search results
Copyright (C) 2017-2018  Marchenko Nikolai

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>
*/
syntax = "proto3";

package ProtoSpace;

message SiteData{
    bool is_valid    = 1;
    string url      = 2;
    int32 id        = 3;
}

message SitePack{
    SiteData ffn    = 1;
    SiteData ao3    = 2;
    // ...
}

message GenreData{
    string genre       = 1;
    float relevance    = 2;
}

message SlashData{
    bool keywords_yes     = 1;
    bool keywords_no      = 2;
    bool keywords_result  = 3;
    bool filter_pass_1    = 4;
    bool filter_pass_2    = 5;
}


// tags will be stored locally for the time being
message Fanfic{

    bool is_valid                   = 1;
    int32 id                        = 2;
    int32 complete                  = 3;
    int32 recommendations           = 4;

    string word_count               = 5;
    string chapters                 = 6;
    string reviews                  = 7;
    string favourites               = 8;
    string follows                  = 9;
    string rated                    = 10;
    string fandom                   = 11;
    string author                   = 12;
    string title                    = 13;
    string summary                  = 14;
    string language                 = 15;
    string published                = 16; // yyyyMMdd
    string updated                  = 17; // yyyyMMdd
    string characters               = 18;
    
    repeated string fandoms         = 19;
    repeated int32  fandom_ids      = 20;
    string genres                   = 21;    
    SitePack site_pack              = 22;
    repeated GenreData real_genres  = 23;
    SlashData slash_data            = 24; 
}
