syntax = "proto3";
import "server_base_structs.proto";
package ProtoSpace;

message IgnoredFandomsToken{
    repeated int32 fandom_ids           = 1;
    repeated bool  ignore_crossovers    = 2;
}

message NegativeTagsToken{
    repeated int32 basicNegatives       = 1;
    repeated int32 strongNegatives      = 2;
}

message RecommendationListRequestData{
    string list_name                            = 1;
    RecommendationListParams general_params      = 2;
    SiteIDPack id_packs                         = 3;
    RecListUserData user_data                   = 4;
};


message RecommendationListParams{
    bool is_automatic                   = 1;
    int32 min_fics_to_match             = 2;
    int32 max_unmatched_to_one_matched  = 3;
    int32 always_pick_at                = 4;
    bool use_weighting                  = 5;
    bool use_mood_filtering             = 6;
    int32 users_ffn_profile_id          = 7;
}


message RecListUserData{
    IgnoredFandomsToken ignored_fandoms = 1;
    NegativeTagsToken negative_feedback = 2;
    repeated int32 liked_authors        = 3;
    int32 users_ffn_profile_id          = 4;
}


message RecommendationListData{
    bool list_ready                             = 1;
    string list_name                            = 2;
    repeated int32 fic_ids                      = 3;
    repeated int32 fic_matches                  = 4;
                                                
    map<int32, int32> match_report              = 5;
    repeated RecommendationBreakdown breakdowns = 6;

    // these are internal ids
    // no conflict & harassment possibilities here
    repeated int32 author_ids                   = 7;
    repeated int32 purged                       = 8;
    RecommendationListParams used_params         = 9;
}



message RecommendationBreakdown{
    int32 id              = 1;
    int32 counts_common   = 2;
    int32 counts_uncommon = 3;
    int32 counts_rare     = 4;
    int32 counts_unique   = 5;
    int32 votes_common    = 6;
    int32 votes_uncommon  = 7;
    int32 votes_rare      = 8;
    int32 votes_unique    = 9;
}

